--- a/_posts/2019-12-28-the-us-narrative-today.html
+++ b/_posts/2019-12-28-the-us-narrative-today.html
@@ -1370,107 +1370,107 @@ stories:
   domain: http://www.loganbanner.com/
   link: https://www.loganbanner.com/online_features/fashion_beauty_fitness/why-a-personalized-diet-can-help-you-achieve-better-results/article_c8226dbf-3c34-5b8b-bd7f-7c7c2e6d8263.html
 images:
-- name: art-museum-art-museum-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-dark-soul.jpg
-- name: rockingchair-rockingchair-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-dark-rain.jpg
-- name: containership-containership-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-pablo-blue.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-alien-goggles.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-alien-goggles.JPG
-- name: los-angeles-from-observatory-losangeles-from-observatory-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-purp-paper.jpg
-- name: yosemite-yosemite-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-dali-three.jpg
-- name: ellis-island-ellis-island-room-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-colorful-dream.jpg
-- name: old-granary-field-oldhouse-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-yellow-paper.jpg
-- name: mosaic-face-mosaic-face-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-ww2-color.jpg
-- name: liberty-back-statue-liberty-back-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-dark-dali.jpg
-- name: flower-barbed-wire-flower-barbed-wire-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-colorful-blocks.jpg
-- name: oldhouse-granaryfield-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-purp-paper.jpg
-- name: windowmountain-window-mountain-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-oily-mcoilface.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-purple-pond.jpg
-- name: birdhouse-birdhouse-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-crafty-painting.jpg
-- name: gears-4882162452-fa3126b38d-b-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-blue-brush.jpg
-- name: bluelake-cinnamon-rolls-file-00-00-38-67.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-cinnamon-rolls-file-00-00-38-67.jpg
-- name: gypsymosaic-gypsy-eyes-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-dali-three.jpg
-- name: crow_blue_granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_blue_granite.jpg
-- name: old-granary-field-oldhouse-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-wols.jpg
-- name: carry-load-carryload-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-aqua.jpg
-- name: stories-window-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-window-clean-view.jpg
-- name: braceros-domingo-ulloa-colonial-solider-pointing.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-colonial-solider-pointing.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-umberto-bocc.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-umberto-bocc.JPG
-- name: rockingchair-rockingchair-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-diego-rivera1.jpg
-- name: machine-road-machine-road-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-purple-storm.jpg
-- name: nazi-invasion-sheep-grazing-grass-green.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-sheep-grazing-grass-green.jpg
-- name: oldcabin-store-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-green-zuma.jpg
-- name: victoria-victoria-corner-hotel.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/victoria-victoria-corner-hotel.jpg
-- name: store-on-corner-oldcabin-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-really-hot.jpg
-- name: rockingchair-face-2-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-face-2-alberto-giacometti.jpg
-- name: hollywood-building-hollywood-building-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-nazi-poster.jpg
-- name: trucksilo-trucksilo-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-graham-sutherland.jpg
-- name: school-clouds-church-clouds-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-space-pizza.jpg
-- name: aws-s3-square-76-73-800-500-0-max-0--1--1-square.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-76-73-800-500-0-max-0--1--1-square.jpg
-- name: border-fence-border-fence-on-hill-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-neo-instinct.jpg
-- name: bordercrossing-bordercrossing-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-neo-instinct.jpg
-- name: border-fence-border-fence-on-hill-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-graham-sutherland.jpg
-- name: berlinwall-DSC-0084-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-gred-mash.jpg
-- name: gypsymosaic-gypsy-eyes-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-yellow-paper.jpg
-- name: miamibeach-miamibeach-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-crabapple.jpg
-- name: hollywood-building-hollywood-building-horiz-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-horiz-circuit.jpg
-- name: aws-s3-stories-fence-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-fence-crabapple.jpg
-- name: abe-lincoln-one-purp-paper-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-purp-paper-file-00-00-00-00.jpg
-- name: berlinwall2-berlinwall-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-rainbow-festival.jpg
-- name: meadowbutterfly-meadow-butterfly-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-yellow-paper.jpg
-- name: flower-barbed-wire-flower-barbed-wire-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-dali-two.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-space-pizza.jpg
-- name: locked-up-steam-lock-up-steam-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-atari-missle.jpg
-- name: death-valley-death-valley-national-park-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-gred-mash.jpg
-- name: mistywoods-babyfoot-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-green-zuma.jpg
+- name: adam-smith-adam-smith-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-satan-red.jpg
+- name: server-cloud-server-racks-door-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-creativity.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-neo-instinct.jpg
+- name: machine-road-machine-road-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-crafty-painting.jpg
+- name: catacombs-catacombs-jap-dys-1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-jap-dys-1.jpg
+- name: fence-fence-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-plentiful.jpg
+- name: aws-s3-square-C2L6QJRUcAEVlYF-square.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-C2L6QJRUcAEVlYF-square.jpg
+- name: supreme-court-supremecourt-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-blue-circuit.jpg
+- name: oldtrain-oldtrain-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-kandinsky-bv.jpg
+- name: copper-circuit-seattle-looking-north.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-seattle-looking-north.jpg
+- name: nazi-invasion-container-several-colors-grey.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-container-several-colors-grey.jpg
+- name: amusement-park-amusement-park-2-horiz-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-horiz-circuit.jpg
+- name: school-clouds-church-clouds-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-colorful-dream.jpg
+- name: power-lines-power-lines-empty-space-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-copper-circuit.jpg
+- name: aws-s3-diamondcreek-diamondcreek-still.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-diamondcreek-diamondcreek-still.jpg
+- name: copper-circuit-cross-against-trees.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-cross-against-trees.jpg
+- name: legal-statue-legalstatue-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-creativity.jpg
+- name: liberty-back-statue-liberty-back-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-colorful-blocks.jpg
+- name: udnie-downtown-building.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-downtown-building.jpg
+- name: yosemite-yosemite-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-matrix.jpg
+- name: legal-statue-legalstatue-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-blue-circuit.jpg
+- name: death-valley-death-valley-national-park-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-pablo-blue.jpg
+- name: oldcabin-store-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-purple-pond.jpg
+- name: window-window-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-crafty-painting.jpg
+- name: window-window-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-hot-spicy.jpg
+- name: la-muse-electric-tower-sun-behind.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-electric-tower-sun-behind.jpg
+- name: castle-wall-DSC-0067-hot-spicy.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-hot-spicy.JPG
+- name: curtain-curtain-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-alien-goggles.jpg
+- name: ellis-island-ellis-island-room-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-space-pizza.jpg
+- name: castle-wall-DSC-0067-plentiful.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-plentiful.JPG
+- name: old-door-lock-old-door-lock-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-sunday.jpg
+- name: white-house-whitehouse-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-dry-skin.jpg
+- name: rain-princess-city-clouds-waterfront.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-city-clouds-waterfront.jpg
+- name: oldhouse-oldhouse-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-emily-carr.jpg
+- name: old-door-lock-old-door-lock-2-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-umberto-bocc.jpg
+- name: aws-s3-stories-gears-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-gears-smoking-cigarette.jpg
+- name: old-granary-field-oldhouse-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-far-away.jpg
+- name: subway-subway-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-alberto-giacometti.jpg
+- name: power-lines-power-lines-empty-space-copper-circuit-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-copper-circuit-2.jpg
+- name: bf-skinner-container-several-colors-grey.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-container-several-colors-grey.jpg
+- name: border-crossing-bordercrossing-dark-soul.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-dark-soul.png
+- name: curtain-curtain-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-pablo-blue.jpg
+- name: stories-white-house-window-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-white-house-window-atari-missle.jpg
+- name: copper-circuit-london-underground-covent-garden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-london-underground-covent-garden.jpg
+- name: art-museum-art-museum-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-pablo-blue.jpg
+- name: locked-up-steam-lock-up-steam-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-smoking-cigarette.jpg
+- name: rain-princess-construction-crane-city.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-construction-crane-city.jpg
+- name: capital-battle-capitolbattle-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-crafty-painting.jpg
+- name: old-granary-field-granaryfield-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-dali-two.jpg
+- name: fence-bw-fist-blue-circuit.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-bw-fist-blue-circuit.png
+- name: sand-hand-sand-hand-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-crafty-painting.jpg
 ---
 Car Bomb In Somali Capital Kills At Least 30, Spokesman Says.&nbsp;Lakewood Health System, Staples.&nbsp;Andrew Ridgeley Pays Tribute To George Michael's Late Sister Melanie Panayiotou.&nbsp;Top Story Countdown Continues.&nbsp;Cross Inks To Become A Golden Eagle.&nbsp;Byron, West Win Classic Basketball Openers.&nbsp;New Mayor Names Former Sheriff As Alexandria Police Chief.&nbsp;Recalling State's Worst Environmental Disaster.&nbsp;
